# spark

./: .clang-format  .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  tests_include-b12d07c.cmake
cmake/: cpm.cmake  external.cmake  external_libs.cmake  random.cmake
include/kn/collisions/: mcc.h  reaction.h  scattering.h  target.h
include/kn/collisions/reactions/: he_reactions.h
include/kn/constants/: constants.h
include/kn/core/: vec.h
include/kn/electromagnetics/: poisson.h
include/kn/interpolate/: field.h  weight.h
include/kn/particle/: boundary.h  pusher.h  species.h
include/kn/random/: random.h
include/kn/spatial/: grid.h
include/spark/collisions/: basic_reactions.h  mcc.h  reaction.h  scattering.h  target.h
include/spark/collisions/reactions/: he_reactions.h
include/spark/constants/: constants.h
include/spark/core/: enum_bit_ops.h  matrix.h  vec.h
include/spark/electromagnetics/: poisson.h
include/spark/em/: electric_field.h  poisson.h
include/spark/interpolate/: field.h  weight.h
include/spark/particle/: boundary.h  emitter.h  pusher.h  species.h
include/spark/random/: random.h
include/spark/spatial/: grid.h
scripts/: codata_generate.py
src/: sci.h
src/collisions/: mcc.cpp  reaction.cpp  scattering.cpp
src/containers/: buffer.h  containers.h
src/electromagnetics/: poisson.cpp  struct_poisson.cpp  thomas_poisson.cpp  util.cpp
src/em/: cylindrical_poisson.cpp  electric_field.cpp  struct_poisson.cpp  thomas_poisson.cpp  util.cpp
src/interpolate/: field.cpp  interp1d.h  interpolate.h  weight.cpp
src/log/: log.h
src/particle/: boundary.cpp  pusher.cpp  species.cpp  tiled_boundary.cpp
src/random/: seed.cpp
src/random/backends/: splitmix64.cpp  std_mt19937.cpp  xoshiro256plus.cpp  ziggurat.cpp
src/spatial/: grid.cpp
tests/: CMakeLists.txt  test_grid.cpp  test_interp1d.cpp  test_matrix.cpp  test_poisson.cpp  test_pusher.cpp  test_species.cpp  test_vec.cpp
tests/collisions/: test_mcc.cpp  test_reactions.cpp  test_scattering.cpp  test_target.cpp
tests/core/: test_matrix.cpp
tests/em/: test_electric_field.cpp
tests/interpolate/: test_field.cpp  test_weight.cpp
tests/particle/: test_boundary.cpp  test_emitter.cpp  test_pusher.cpp
tests/random/: test_random.cpp
tests/spatial/: test_grid.cpp
